--- a/media/js/wmd/wmd-test.html
+++ b/media/js/wmd/wmd-test.html
@@ -1,158 +1,37 @@
-<!DOCTYPE html>
 <html>
+    <head>
+        <title>WMD Example</title>
+        
+        <link rel="stylesheet" type="text/css" href="wmd.css"/>
+        <script type="text/javascript" src="wmd.js"></script>
+        <script type="text/javascript" src="showdown.js"></script>
+		<style type="text/css" media="screen">
+			textarea {width:100%;margin:0;}
+			textarea, #notes-preview {border:1px solid gray;height:100px;}
+			#notes-preview {overflow-x:hidden;overflow-y:scroll;}
+		</style>
+    </head>
+    <body>
+        <h1>WMD Example</h1>
 
-	<head>
-		<title>Test WMD Page</title>
-		
-		<link rel="stylesheet" type="text/css" href="wmd.css" />
-		
-		<meta http-equiv="pragma" content="no-cache">
-		<meta http-equiv="cache-control" content="no-cache">
-		<meta http-equiv="pragma-directive" content="no-cache">
-		<meta http-equiv="cache-directive" content="no-cache">
-		<meta http-equiv="expires" content="0">
-		
-		<script type="text/javascript" src="jQuery/jquery-1.2.6.js"></script>
-		<script type="text/javascript" src="showdown.js"></script>
-	</head>
-	
-	<body>
-		<div id="wmd-button-bar" class="wmd-panel"></div>
-		<br/>
-		<textarea id="editor" class="wmd-panel"></textarea>
-		<br/>
-		<div id="previewer" class="wmd-panel"></div>
-		<br/>
-		<div id="wmd-output" class="wmd-panel"></div>	
-		
-		<p>To test that page up/down and arrow keys work, copy this above the WMD
-		control.</p>
-		
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
-		Scroll Down!<br/>
+        <div>
+            <div id="notes-button-bar"></div>
+            <textarea id="notes"></textarea>
 
-		<script type="text/javascript" src="wmd.js"></script>
-	</body>
+			Preview:
+            <div id="notes-preview"></div>
+
+			Output:
+			<textarea type="text" name="copy_html" value="" id="copy_html"></textarea>
+        </div>
+
+        <script type="text/javascript">
+            setup_wmd({
+                input: "notes",
+                button_bar: "notes-button-bar",
+                preview: "notes-preview",
+				output: "copy_html"
+            });
+        </script>
+    </body>
 </html>
